welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:7: error: Missing closing brace `}' assumed here
     nbPas = nbPas + 1 }
     ^